src/test/ui/generator/yield-in-function.stderr
error[E0627]: yield statement outside of generator literal
  --> $DIR/yield-in-function.rs:3:13
   |
LL | fn main() { yield; }
   |             ^^^^^

error: aborting due to previous error

