src/test/ui/generator/yield-in-function.rs
#![feature(generators)]

fn main() { yield; }
//~^ ERROR yield statement outside
